...

  return (
    <View style={styles.container}>
      <Header title="Localis Mobile" />

      <View style={styles.content}>
        <Card title="Iniciar sesión">
          <Input
            label="Email"
            value={email}
            onChangeText={setEmail}
            placeholder="usuario@ejemplo.com"
            keyboardType="email-address"
            autoCapitalize="none"
          />
          <Input
            label="Contraseña"
            value={password}
            onChangeText={setPassword}
            secureTextEntry
            placeholder="Contraseña"
          />

...
