...
    );
  }

  return (
    <View style={styles.container}>
      <View style={styles.currentStatus}>
        <Text style={styles.label}>Estado actual:</Text>
        <Badge
          label={getStatusLabel(currentStatus as any)}
          color={getStatusColor(currentStatus as any)}
        />
      </View>

...
